z-index fixes

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ main{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    z-index: -10;
 }
 
 .game-quiz-container{
